--- a/about/index.html
+++ b/about/index.html
@@ -4,5 +4,5 @@ title: About the Whale Magnet's
 ---
 	<h1>{{ page.title }}</h1>
   <body>
-    <div>We are the Whale Magnets. Our mission is to connect people who love whales and want to protect our global ocea. Knowing what we know now, it is time to Say No to Fish, until our oceans are sustainably managed. </div>
+    <div>We are the Whale Magnets. Our mission is to connect people who love whales and want to protect our global ocean. Knowing what we know now, it is time to Say No to Fish, until our oceans are sustainably managed. </div>
   </body>
