--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,7 @@ title: Whale Magnet's Blog
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Whale Magnet's CV</title>
+    <title>Whale Magnet's Projects</title>
 </head>
 <body>
 
